--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <div id="savingsTypeSection">
       <label for="savingsType">Type of Savings:</label>
       <select id="savingsType" name="savingsType">
+      <option value="Choose option" selected> </option>
         <option value="group">Group savings</option>
         <option value="daily">Daily savings</option>
       </select>
