--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
     <div id="savingsTypeSection">
       <label for="savingsType">Type of Savings:</label>
       <select id="savingsType" name="savingsType">
-      <option value="Choose option" selected> </option>
+      <option value="Choose option" selected>Choose Option</option>
         <option value="group">Group savings</option>
         <option value="daily">Daily savings</option>
       </select>
 
       <!-- Group Savings Details -->
       <div id="groupSavingsDetails" class="hidden">
-        <label for="groupName">Name of Group (optional):</label>
+        <label for="groupName">Name of Group (optional):<label>
         <input type="text" id="groupName" name="groupName">
 
         <label for="groupSize">Number of Members in the Group:</label>
