--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div id="savingsTypeSection">
       <label for="savingsType">Type of Savings:</label>
       <select id="savingsType" name="savingsType">
-      <option value="Choose option" selected>Choose Option</option>
+      <option value="Choose option" required>Choose Option</option>
         <option value="group">Group savings</option>
         <option value="daily">Daily savings</option>
       </select>
