--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Chamavest Data Collection Page</title>
     <style>
         body {
@@ -13,7 +13,7 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            background: #3498db; /* Use the desired background color */
+            background: #3498db;
             color: #fff;
             font-family: 'Arial', sans-serif;
             text-align: center;
